--- a/index.html
+++ b/index.html
@@ -162,7 +162,11 @@
         <p class="Product_p">Our Latest Products</p>
         <div class="six_watch">
           <div class="box">
-            <div class="six_watch_elemetn">
+            <div class="time_element">
+              <img src="./image/market.png" alt="no " />
+              <img src="./image/heart.png" alt="no " />
+            </div>
+            <div class="six_watch_elemetn change">
               <img class="time" src="./image/watch_1.png" alt="no imaga" />
               <div class="smart_text">Apple Smart I</div>
               <div class="star">
