--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     />
   </head>
   <body>
-    <!-- <div id="loading">
+    <div id="loading">
       <div class="loadingio-spinner-double-ring-2by998twmg8">
         <div class="ldio-yzaezf3dcmj">
           <div></div>
@@ -36,7 +36,7 @@
           <div><div></div></div>
         </div>
       </div>
-    </div> -->
+    </div>
     <div class="nav_dg" id="navbar">
       <div class="container">
         <nav id="nav-bg" class="nav_padding">
